--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -156,7 +156,7 @@ However, as the levels of variable 'a_hhresp_dv' show, all households within the
 
 The backwards logistic regression model shows us that the variables ... are useful in predicting nonresponse. 
 The predictive accuracy of the stepwise model is ..., where for the full model this was ..
-
+ 
 half full model: 
 NR ~ a_gor_dv + a_urban_dv + a_sex + a_racel_dv + a_employ + 
     a_agegr5_dv + a_agegr10_dv + a_agegr13_dv + hh_size + n_child + 
@@ -179,7 +179,7 @@ The first categorical variable, a_agegr5_dv, contains 15 categories indicating a
 
 The continous variable a_dvage denotes the age of respondents in completed years at the moment the interview took place. This was computed by comparing the date of birth and the interview date, or using an estimate (see estimated age variable a_ageest (n = 22), and imputated age variable a_ageif (n = 55)).
 
-To investigate the relationship between age and household composition, it is necessary to know which households consist of children living at home, and which don't. Presumably, the largest variation between children living at home and those living independently occurs within the age group 15-25 year-olds. If we would use the ten-year intervals to indicate age, we might get less precise estimates, because of the large variance wihtin the age category '10-19 years old'. Therefore, we decided to use an age variable with smaller intervals. Because of the unequal intervals in the age variable with 13 categories, it should be analysed as ordinal variable. To interpret the relationship with household composition, this is not ideal. Ultimately, we decided to use either a_dvage or a_agegr5_dv.
+To investigate the relationship between age and household composition, it is necessary to know which households consist of children living at home, and which don't. Presumably, the largest variation between children living at home and those living independently occurs within the age group 15-25 year-olds. If we would use the ten-year intervals to indicate age, we might get less precise estimates, because of the large variance wihtin the age category '10-19 years old'. Therefore, we decided to use an age variable with smaller intervals. Because of the unequal intervals in the age variable with 13 categories, it should be analysed as ordinal variable. To interpret the relationship with household composition, this is not ideal. Ultimately, we decided to use agegr5_dv, which is categorical and allows us for contingency tables and nice graphical representations. 
 
 Secondly, to construct a new variable denoting household composition, we used Eurostat as reference. Eurostat distinghuishes three types of variables used to descripte household composition: 
 
