--- a/SurveyFinalRcode.Rmd
+++ b/SurveyFinalRcode.Rmd
@@ -57,12 +57,15 @@ nrow(society[society$a_gor_dv == "northern ireland",])
 # Run linear regression
 coeff <- with(society, lm(a_psnenip_xw ~ a_psnenip_xd + a_sex + a_dvage + a_gor_dv))
 
-# Get and sort coefficients
+# Get coefficients of government office regions
 coeff <- coeff$coefficients
-coeff.gor <- sort(coeff[5:15])
+coeff.gor <- coeff[5:15]
+# Add the base, which has value 0
+coeff.gor[11] <- 0
+names(coeff.gor)[11] <- "a_gor_dvnorth east"
 
-# Plot coefficients
-plot(coeff.gor, xlab = "Government Region", ylab = "Coefficient")
+# Sort and plot coefficients
+plot(sort(coeff.gor), xlab = "Government Office Region", ylab = "Coefficient")
 
 # Show coefficients
 coeff.gor
@@ -93,13 +96,13 @@ x <- unlist(strsplit(names(coeff2.age), "age_fac"))
 names(coeff2.age) <- x[x!=""]
 
 # Plot coefficients
-plot(as.numeric(names(coeff2.age)), coeff2.age)
+plot(as.numeric(names(coeff2.age)), coeff2.age, xlab="Age", ylab="Coefficient")
 for (i in seq(4,104,10)+0.5){
  abline(v=i, col="red") 
 }
 
 # Plot with group changes
-plot(as.numeric(names(coeff2.age)), coeff2.age)
+plot(as.numeric(names(coeff2.age)), coeff2.age, xlab="Age", ylab="Coefficient")
 for (i in c(14.5,24.5,34.5,44.5,64.5,74.5)){
  abline(v=i, col="red") 
 }
