--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -38,7 +38,8 @@ The aim of this research project is to investigate several properties of the IP 
 
 The data in this research project was obtained by 'The National Centre for Social Research' from the United Kingdom (Boreham, & Constantine, 2008, p. 3), and retrieved via Dr. Peter Lugtig (Utrecht University). Data analysis is performed using the statistics freeware R (R Core Team, 2003). Preprocessing of the data included recoding the variable 'a_dvage' as numeric instead of factor, and removal of irrelevant variables from the dataframe (see Appendix II: R Script).
 
-To obtain accurate estimates from survey data with a multistage sampling design, regular SRS estimators do not suffice (Lohr, 2010). Therefore, the R package 'survey' (Lumley, 2018) is used. By specifying the survey design and appropriate weights, estimates of population quantities and their variances are adjusted for the complex nature of the survey data. The survey package functions 'svydesign', and 'svymean' are employed to estimate population quantities.
+To obtain accurate estimates from survey data with a multistage sampling design, regular SRS estimators do not suffice (Lohr, 2010). Therefore, the R package 'survey' (Lumley, 2018) is used. By specifying the survey design and appropriate weights, estimates of population quantities and their variances are adjusted for the complex nature of the survey data. The survey package functions 'svydesign', ' and 'svymean' are employed to estimate population quantities. To investigate the relationship between age and household_type, the survey package function 'svytable' was used. 
+
 Moreover, stepwise logistic regression is performed to investigate which variables might be used to construct nonresponse weights. This exploratory analysis is conducted using the R package 'MASS' (Venables, & Ripley, 2002).
 
 
@@ -148,7 +149,8 @@ There are two stages of nonresponse we would have wanted to consider:
 However, as the levels of variable 'a_hhresp_dv' show, all households within the sample completed at least the household grid. We do not have any information about the 1271 adresses that were selected from the sampling frame but did not take part in an interview. Therefore, we only account for individual unit nonresponse, which occured in 13.5% of the observations in the sample.
 
 The backwards logistic regression model shows us that the variables ... are useful in predicting nonresponse. 
-The predictive accuracy of the stepwise model is ..., where for the full model this was ..
+
+>>> Evaluate fit/prediction of model: The predictive accuracy of the stepwise model is ..., where for the full model this was ..
  
 half full model: 
 NR ~ a_gor_dv + a_urban_dv + a_sex + a_racel_dv + a_employ + 
@@ -160,6 +162,9 @@ NR ~ a_racel_dv + a_agegr5_dv + a_agegr13_dv + hh_size + a_sex +
 half backwards model: (gor & hh_type are additional compared to forward)
 NR ~ a_gor_dv + a_urban_dv + a_sex + a_racel_dv + a_agegr5_dv + 
     a_agegr13_dv + hh_size + hh_type
+    
+We investigate the most important predictors individually: 
+>>> plot relationships (I did a few analyses in the finalcode file but since the model isn't definitive I didn't write up any concluding remarks about them yet)
 
 ## Part III: Estimation
 
@@ -186,7 +191,19 @@ All three household composition indicators were constructed from the data and in
 
 Thirdly, we determided which weighting variable is appropriate to investigate the relationship between age and household composition. We want to use a weight per person (PSN), as it is impossible to calculate age per household. We also want to use the enumeration grid weights (EN), as both age and household composition have no missing values. We want the weights of the first wave (IP), as that is the one we are investigating. Finally, we want to use the stratified weights (XW) rather than the design weights, as we are investigating population values and not sample values. Thus, we want to use the weight a_psnenip_xw, as this is the only weight that covers the correct data in the correct way. 
 
-The relationship between age and household composition is the following: ADD RESULTS!!!
+Our objective was to investigate the relationsihp between age and household composition. We therefore plotted the composition of variable hh_type per age category (from a_agegr5_dv). The plot shows the relationships between household_type and age you'd expect, from which we will highlight a few: 
+
+* Persons in the youngest three age categories (0-4, 5-9 and 10-14 years old) where all members of either households of type "couple with children", or "single parent with children", obviously. 
+* The reverse pattern is found in the eldest age categories, where almost all persons are in a household of type "couple without children" or "single without children". 
+* There are also a few interesting developments of categories over age. 
+** As age increases, overall the occurence of households with children (pink and blue colored bars) declines. 
+** Looking at household type "couple with children", the transition from being child in such a household and becoming a parent shows from the decline and subsequent increase of occurences of this householdtype over age. 
+** Similarly, also the transition from living in  a household with no children to living in a household with children, to an "empty nest" is visible by the development of the orange bars (couple without children) and the blue bars (couple with children). This is also true for the yellow and pink bars (single without chldren and single parent with children)
+
+These are obviously just general observations, further statistical investigation is required if there are more specific research questions. 
+
+
+>>> insert image age_householdtype.png 
 
 ### Proportion of employed people of working age (RQ4)
 
