--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -94,9 +94,10 @@ A histogram of the design weight variable (see Figure 2) shows a different reaso
 
 Apart from design weights, each respondent is also assigned an enumerated weight (the variable 'a_psnenip_xw'). This weight was the design weights post-stratified for sex, age and government office region. In the innovation panel study, population values were retrieved from the UK government and the weights were adjusted based on the differences between the sample proportions and these population values. These population values could not be obtained for the current study due to the data not being available to the general public. Another hurdle that had to be overcome was that age and government office region were grouped into respectively seven and four groups (IP User Guide, p.57), but no information was given on how these groups were constructed. An attempt was made to reconstruct these groups using linear regression.
 
-The first step taken was to construct a linear model that contained the design weights, sex, age (numeric, 'a_dvage') and the government office regions (gor):
+The first step taken was to construct a linear model that contained the design weights, sex, age (numeric, 'a_dvage') and the government office regions (GOR):
 
-$$\adjusted \weight \~ \design \weight + \sex + \age + \gor$$
+$$ Weight_{adjusted} \sim Weight_{design} + Sex + Age + GOR$$
+
 
 To find the grouping of government office regions, the coefficients that resulted from this regression, including the baseline, were ordered from lowest to highest, which resulted in the following graph:
 
